--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -9,6 +9,7 @@
     <style name="SplashScreen" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowBackground">@drawable/background_splashscreen</item>
         <item name="android:statusBarColor">@color/background_splash_screen</item>
+        <item name="android:navigationBarColor">@color/background_splash_screen</item>
     </style>
 
     <style name="bottom_navigation">
