--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -34,12 +34,14 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="14dp"
             android:text="Регистрация"
+            android:textColor="@color/main_text_color"
             style="@style/text_bold_30_style" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/text_main_style"
+            android:textColor="@color/main_text_color"
+            style="@style/text_medium_16_style"
             android:text="Имя" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -63,7 +65,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/text_main_style"
+            android:textColor="@color/main_text_color"
+            style="@style/text_medium_16_style"
             android:text="E-mail" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -87,7 +90,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/text_main_style"
+            android:textColor="@color/main_text_color"
+            style="@style/text_medium_16_style"
             android:text="Пароль" />
 
         <com.google.android.material.textfield.TextInputLayout
