--- a/app/src/main/res/layout/main_recycler_view_item.xml
+++ b/app/src/main/res/layout/main_recycler_view_item.xml
@@ -52,6 +52,7 @@
 
         <TextView
             android:id="@+id/name"
+            android:textColor="@color/main_text_color"
             style="@style/text_bold_16_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -66,11 +67,11 @@
 
             <TextView
                 android:id="@+id/user_name"
+                android:textColor="@color/secondary_text_color"
                 style="@style/text_medium_16_style"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Эйфория"
-                android:textColor="@color/secondary_text_color" />
+                android:text="Эйфория" />
 
             <ImageView
                 android:id="@+id/verify"
