--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,6 +9,7 @@
     <style name="SplashScreen" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowBackground">@drawable/background_splashscreen</item>
         <item name="android:statusBarColor">@color/background_splash_screen</item>
+        <item name="android:navigationBarColor">@color/background_splash_screen</item>
     </style>
 
     <style name="bottom_navigation">
@@ -76,66 +77,58 @@
         <item name="hintTextColor">@color/hint_color</item>
     </style>
 
-    <style name="text_main_style">
+    <style name="text_medium_16_style">
         <item name="fontFamily">@font/rubik_medium</item>
         <item name="android:includeFontPadding">false</item>
-        <item name="android:textColor">@color/main_text_color</item>
         <item name="android:textSize">16sp</item>
     </style>
 
     <style name="text_bold_30_style">
         <item name="fontFamily">@font/rubik_bold</item>
         <item name="android:includeFontPadding">false</item>
-        <item name="android:textColor">@color/main_text_color</item>
         <item name="android:textSize">30sp</item>
     </style>
 
     <style name="text_medium_20_style">
         <item name="fontFamily">@font/rubik_medium</item>
         <item name="android:includeFontPadding">false</item>
-        <item name="android:textColor">@color/main_text_color</item>
         <item name="android:textSize">20sp</item>
     </style>
 
-    <style name="text_medium_24_hint_style">
+    <style name="text_medium_24_style">
         <item name="fontFamily">@font/rubik_medium</item>
         <item name="android:includeFontPadding">false</item>
-        <item name="android:textColor">@color/hint_color</item>
         <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="text_tab_layout_style">
+        <item name="fontFamily">@font/rubik_medium</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:textColor">@color/main_text_color</item>
+        <item name="android:textSize">20sp</item>
     </style>
 
     <style name="text_bold_16_style">
         <item name="fontFamily">@font/rubik_bold</item>
         <item name="android:includeFontPadding">false</item>
-        <item name="android:textColor">@color/main_text_color</item>
-        <item name="android:textSize">16sp</item>
-    </style>
-
-    <style name="text_medium_16_style">
-        <item name="fontFamily">@font/rubik_medium</item>
-        <item name="android:includeFontPadding">false</item>
-        <item name="android:textColor">@color/main_text_color</item>
         <item name="android:textSize">16sp</item>
     </style>
 
     <style name="text_medium_12_style">
         <item name="fontFamily">@font/rubik_medium</item>
         <item name="android:includeFontPadding">false</item>
-        <item name="android:textColor">@color/main_text_color</item>
         <item name="android:textSize">12sp</item>
     </style>
 
     <style name="text_medium_10_secondary_style">
         <item name="fontFamily">@font/rubik_medium</item>
         <item name="android:includeFontPadding">false</item>
-        <item name="android:textColor">@color/secondary_text_color</item>
         <item name="android:textSize">10sp</item>
     </style>
 
     <style name="helper_text_medium_12_style">
         <item name="fontFamily">@font/rubik_medium</item>
         <item name="android:includeFontPadding">false</item>
-        <item name="android:textColor">@color/main_color</item>
         <item name="android:textSize">12sp</item>
     </style>
 </resources>
