--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,12 +4,21 @@
         <item name="colorAccent">@color/main_color</item>
         <item name="android:statusBarColor">@color/background</item>
         <item name="android:navigationBarColor">@color/items_color</item>
+        <item name="android:windowLightStatusBar">false</item>
+    </style>
+
+    <style name="Activity" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorAccent">@color/main_color</item>
+        <item name="android:statusBarColor">@color/background</item>
+        <item name="android:navigationBarColor">@color/background</item>
+        <item name="android:windowLightStatusBar">false</item>
     </style>
 
     <style name="SplashScreen" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowBackground">@drawable/background_splashscreen</item>
         <item name="android:statusBarColor">@color/background_splash_screen</item>
         <item name="android:navigationBarColor">@color/background_splash_screen</item>
+        <item name="android:windowLightStatusBar">false</item>
     </style>
 
     <style name="bottom_navigation">
