--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,13 @@
         <item name="android:navigationBarColor">@color/background_splash_screen</item>
     </style>
 
+    <style name="Activity" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorAccent">@color/main_color</item>
+        <item name="android:statusBarColor">@color/background</item>
+        <item name="android:navigationBarColor">@color/background</item>
+        <item name="android:windowLightStatusBar">true</item>
+    </style>
+
     <style name="bottom_navigation">
         <item name="backgroundTint">@null</item>
         <item name="itemTextAppearanceActive">@style/TextAppearance.BottomNavigationView.Active</item>
@@ -130,5 +137,9 @@
         <item name="fontFamily">@font/rubik_medium</item>
         <item name="android:includeFontPadding">false</item>
         <item name="android:textSize">12sp</item>
+    </style>
+    <style name="Base.Theme.MyParty.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 </resources>
