Создал фрагменты для добавления вечеринки

--- a/app/src/main/res/drawable/back_arrow.xml
+++ b/app/src/main/res/drawable/back_arrow.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="21">
   <path
       android:pathData="M11.22,0.866C11.75,1.371 11.771,2.211 11.265,2.742L4.923,9.401H22.173C22.906,9.401 23.5,9.996 23.5,10.728C23.5,11.461 22.906,12.055 22.173,12.055H4.923L11.265,18.715C11.771,19.245 11.75,20.085 11.22,20.591C10.689,21.096 9.849,21.076 9.344,20.545L0.866,11.644C0.378,11.131 0.378,10.326 0.866,9.813L9.344,0.912C9.849,0.381 10.689,0.361 11.22,0.866Z"
-      android:fillColor="#ffffff"
+      android:fillColor="@color/main_text_color"
       android:fillType="evenOdd"/>
 </vector>
