--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -49,16 +49,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            app:boxBackgroundMode="outline"
+            app:counterMaxLength="30"
+            app:counterOverflowTextAppearance="@style/helper_text_medium_12_style_over"
+            app:counterTextAppearance="@style/helper_text_medium_12_style"
             app:helperTextTextAppearance="@style/helper_text_medium_12_style_over">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/text_name"
+                style="@style/edit_text_style"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:lines="1"
-                style="@style/edit_text_style"
-                android:inputType="textPersonName"
-                android:background="@drawable/edit_text_selector"/>
+                android:background="@drawable/edit_text_selector"
+                android:inputType="text"
+                android:lines="1" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
