--- a/app/src/main/res/layout/activity_add_party.xml
+++ b/app/src/main/res/layout/activity_add_party.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:padding="20dp"
-    tools:context=".AddPartyActivity">
+    tools:context=".AddParty.AddPartyActivity">
 
     <ImageButton
         android:id="@+id/btnGoBack"
