--- a/app/src/main/res/layout/fragment_add_party1.xml
+++ b/app/src/main/res/layout/fragment_add_party1.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".AddParty1Fragment">
+    tools:context=".AddParty.AddParty1Fragment">
 
     <TextView
         android:id="@+id/textView2"
