--- a/app/src/main/res/layout/fragment_add_party2.xml
+++ b/app/src/main/res/layout/fragment_add_party2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".AddParty2Fragment">
+    tools:context=".AddParty.AddParty2Fragment">
 
     <ScrollView
         android:layout_width="match_parent"
