--- a/app/src/main/res/layout/fragment_add_party4.xml
+++ b/app/src/main/res/layout/fragment_add_party4.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddParty4Fragment">
+    tools:context=".AddParty.AddParty4Fragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
