--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -73,6 +73,17 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="button_main_style_small" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:minHeight">0dp</item>
+        <item name="android:paddingVertical">6dp</item>
+        <item name="android:paddingHorizontal">6dp</item>
+        <item name="fontFamily">@font/rubik_medium</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
     <style name="edit_text_style">
         <item name="fontFamily">@font/rubik_medium</item>
         <item name="android:includeFontPadding">false</item>
