--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -36,6 +36,9 @@
         android:layout_height="110dp"
         android:layout_marginTop="15dp"
         android:layout_marginStart="20dp"
+        android:src="@drawable/camera"
+        android:padding="30dp"
+        android:background="@drawable/round_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nickUser" />
 
@@ -150,7 +153,7 @@
         android:textColor="@color/main_text_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="14dp"
         android:layout_marginStart="20dp"
         android:text=" "
         app:layout_constraintStart_toStartOf="parent"
@@ -176,7 +179,6 @@
         android:layout_marginTop="10dp"
         android:layout_marginHorizontal="20dp"
         android:textColor="@color/secondary_text_color"
-        android:text=" "
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameUser" />
