Обработка вывода заблокированных Вечеринок на экран пользователя

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -176,7 +176,7 @@
         style="@style/text_medium_16_style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginHorizontal="20dp"
         android:textColor="@color/secondary_text_color"
         app:layout_constraintEnd_toEndOf="parent"
@@ -186,9 +186,14 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
         app:tabTextAppearance="@style/text_tab_layout_style"
-        app:tabGravity="center"
+        app:tabMode="scrollable"
+        app:tabIndicatorAnimationMode="fade"
+        app:tabIndicatorFullWidth="false"
+        app:tabPaddingEnd="10dp"
+        app:tabPaddingStart="10dp"
+        app:tabContentStart="20dp"
+
         app:tabSelectedTextAppearance="@style/text_tab_layout_style"
-        app:tabMode="fixed"
         app:tabRippleColor="@android:color/transparent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
