--- a/app/src/main/res/layout/users_party_item.xml
+++ b/app/src/main/res/layout/users_party_item.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
+    android:id="@+id/background"
     android:background="@drawable/button_secondary_color_selector">
 
     <ImageView
@@ -84,6 +85,18 @@
         android:layout_margin="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/status"
+        style="@style/text_medium_12_style"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="На проверке"
+        android:visibility="gone"
+        android:textColor="@color/yellow"
+        app:layout_constraintEnd_toEndOf="@+id/buttonRe"
+        app:layout_constraintTop_toBottomOf="@+id/buttonRe" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
