--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,6 @@
     <color name="pressed_main_button_color">#AE1F53</color>
 
     <color name="transparent">#00FFFFFF</color>
+
+    <color name="yellow">#E8A636</color>
 </resources>
