--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -40,6 +40,19 @@
         <item name="android:fontFamily">@font/rubik_regular</item>
     </style>
 
+    <style name="image_button_main_style" >
+        <item name="fontFamily">@font/rubik_medium</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:minWidth">0dp</item>
+        <item name="android:paddingVertical">6dp</item>
+        <item name="android:paddingHorizontal">6dp</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
     <style name="button_main_style" >
         <item name="fontFamily">@font/rubik_medium</item>
         <item name="android:includeFontPadding">false</item>
@@ -82,6 +95,13 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">14sp</item>
         <item name="android:gravity">center</item>
+    </style>
+
+    <style name="search_view" parent="Widget.AppCompat.SearchView">
+        <item name="android:fontFamily">@font/rubik_medium</item>
+        <item name="android:editTextColor">@color/secondary_text_color</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColorHint">@color/main_color</item>
     </style>
 
     <style name="edit_text_style">
