--- a/app/src/main/res/drawable/button_main_color_selector.xml
+++ b/app/src/main/res/drawable/button_main_color_selector.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_pressed="false">
+    <item android:state_enabled="true" android:state_pressed="false">
         <shape android:shape="rectangle">
             <solid android:color="@color/main_color"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
-    <item android:state_pressed="true">
+    <item android:state_enabled="true" android:state_pressed="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/pressed_main_button_color"/>
+            <corners android:radius="10dp"/>
+        </shape>
+    </item>
+    <item android:state_enabled="false">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/enabled_false_main_button_color"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
