--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="pressed_secondary_button_color">#E4E4E4</color>
 
     <color name="pressed_main_button_color">#AE1F53</color>
+    <color name="enabled_false_main_button_color">#E56190</color>
 
     <color name="transparent">#00FFFFFF</color>
 
