--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -40,14 +40,10 @@
         <item name="android:fontFamily">@font/rubik_regular</item>
     </style>
 
-    <style name="ToggleButtonWithIconOnly" parent="Widget.MaterialComponents.Button.OutlinedButton">
-        <item name="iconPadding">0dp</item>
-        <item name="android:insetTop">0dp</item>
-        <item name="android:insetBottom">0dp</item>
-        <item name="android:paddingLeft">12dp</item>
-        <item name="android:paddingRight">12dp</item>
-        <item name="android:minWidth">48dp</item>
-        <item name="android:minHeight">48dp</item>
+    <style name="text_background_style" >
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:paddingVertical">7dp</item>
+        <item name="android:paddingHorizontal">4dp</item>
     </style>
 
     <style name="image_button_main_style" >
@@ -131,10 +127,26 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="text_medium_16_with_background_style">
+        <item name="fontFamily">@font/rubik_bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:paddingVertical">4dp</item>
+        <item name="android:paddingHorizontal">4dp</item>
+    </style>
+
     <style name="text_bold_30_style">
         <item name="fontFamily">@font/rubik_bold</item>
         <item name="android:includeFontPadding">false</item>
         <item name="android:textSize">30sp</item>
+    </style>
+
+    <style name="text_bold_30_with_background_style">
+        <item name="fontFamily">@font/rubik_bold</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:paddingVertical">7dp</item>
+        <item name="android:paddingHorizontal">4dp</item>
     </style>
 
     <style name="text_bold_20_style">
