--- a/app/src/main/res/drawable/empty_star_big.xml
+++ b/app/src/main/res/drawable/empty_star_big.xml
@@ -5,13 +5,11 @@
     android:viewportHeight="45">
   <path
       android:pathData="M22.5,22.5m-22.5,0a22.5,22.5 0,1 1,45 0a22.5,22.5 0,1 1,-45 0"
-      android:fillColor="#2C2C2C"
-      android:fillAlpha="0.48"/>
+      android:fillColor="@color/items_color_alpha" />
   <path
       android:pathData="M21.958,12.327C22.174,11.891 22.795,11.891 23.01,12.327L25.796,17.971C25.881,18.144 26.046,18.264 26.237,18.292L32.466,19.197C32.947,19.267 33.139,19.858 32.791,20.197L28.284,24.59C28.146,24.725 28.083,24.919 28.115,25.11L29.179,31.313C29.261,31.792 28.758,32.158 28.328,31.931L22.757,29.003C22.587,28.913 22.382,28.913 22.211,29.003L16.641,31.931C16.21,32.158 15.707,31.792 15.79,31.313L16.853,25.11C16.886,24.919 16.823,24.725 16.685,24.59L12.178,20.197C11.83,19.858 12.022,19.267 12.503,19.197L18.731,18.292C18.922,18.264 19.087,18.144 19.173,17.971L21.958,12.327Z"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
-      android:fillColor="#2C2C2C"
-      android:fillAlpha="0.48"
-      android:strokeColor="#ffffff"/>
+      android:fillColor="@color/items_color_alpha"
+      android:strokeColor="@color/main_text_color"/>
 </vector>
